# voiceinput

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: settings.example.json  settings.example.yaml  settings.yaml
src/: __init__.py  app_factory.py  asr_engine.py  audio_processor.py  autostart.py  bootstrap.py  cli.py  desktop_entry.py  desktop_hotkey.py  desktop_preview.py  loading_status.py  model_download.py  recorder.py  recording_session.py  runtime_ui.py  text_processing.py  usage_stats.py  vocabulary_suggestion_store.py  voice_entry.py  web_app.py
tasks/: lessons.md
tests/: conftest.py  test_app_factory.py  test_asr_engine.py  test_audio_processor.py  test_autostart.py  test_bootstrap.py  test_cli.py  test_desktop_entry.py  test_desktop_hotkey.py  test_desktop_preview.py  test_loading_status.py  test_model_download.py  test_recorder.py  test_recording_session.py  test_runtime_ui.py  test_text_processing.py  test_usage_stats.py  test_web_app.py
