[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceinput"
version = "0.1.0"
description = "A macOS terminal voice input tool built on top of funasr."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "voiceinput contributors" }
]
keywords = ["asr", "funasr", "voice", "cli", "speech-to-text"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Software Development :: User Interfaces",
]
dependencies = [
  "numpy>=1.26.0",
  "funasr==1.3.1",
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
  "transformers>=4.0.0",
  "openai-whisper>=20250625",
  "pynput>=1.7.7",
  "sounddevice>=0.4.0",
  "scipy>=1.10.0",
  "soundfile>=0.12.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
voice = "voice_entry:main"
voice-desktop = "desktop_entry:main"
voice-web = "web_app:main"

[tool.setuptools]
include-package-data = true
py-modules = [
  "app_factory",
  "asr_engine",
  "audio_processor",
  "autostart",
  "bootstrap",
  "cli",
  "desktop_entry",
  "desktop_hotkey",
  "desktop_preview",
  "recorder",
  "recording_session",
  "runtime_ui",
  "text_processing",
  "vocabulary_suggestion_store",
  "voice_entry",
  "web_app",
]

[tool.setuptools.data-files]
"config" = ["config/settings.example.yaml"]

[tool.setuptools.package-dir]
"" = "src"
